--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-*.java @kingchan223 @sojungpp @chaerlo127 @psyeon1120 @leeseunghakhello @dangnak2 @utku1989
+*.java @kingchan223 @sojungpp @chaerlo127 @psyeon1120 @leeseunghakhello @dangnak2
