--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,30 @@
+spring:
+  application:
+    name: IceButler_Server
+
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
+
+
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver # mysql 8??
+    url: jdbc:mysql://icebutler.cwkkfphsqxw5.ap-northeast-2.rds.amazonaws.com:3306/icebutler?serverTimezone=Asia/Seoul
+    username: admin # ??????
+    password: ADMIN123! # ??????
+  sql:
+    init:
+      platform: mysql
+
+  jpa:
+    hibernate:
+      ddl-auto: create
+    generate-ddl: true
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+
+logging.level:
+  org.hibernate.SQL: debug
 
