--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,13 @@ dependencies {
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.32'
+	implementation group: 'org.javassist', name: 'javassist', version: '3.15.0-GA'
+
+	// Swagger2 gradle
+	implementation 'io.springfox:springfox-swagger2:2.9.2'
+	implementation 'io.springfox:springfox-swagger-ui:2.9.2'
+
 }
 
 tasks.named('test') {
