--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,11 @@ dependencies {
 
 	//redis
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+	//redis
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
+	//redis
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 }
 
 tasks.named('test') {
