--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.32'
 	implementation group: 'org.javassist', name: 'javassist', version: '3.15.0-GA'
+	implementation 'com.googlecode.json-simple:json-simple:1.1.1'
 
 	// Swagger2 gradle
 	implementation 'io.springfox:springfox-swagger2:2.9.2'
