#43 feat: 식품 바코드 조회 API 생성

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,6 +23,8 @@ spring:
     properties:
       hibernate:
         format_sql: true
+  profiles:
+    include: API-KEY
 
 logging.level:
   org.hibernate.SQL: debug
