#43 fix: yml 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,8 +23,10 @@ spring:
     properties:
       hibernate:
         format_sql: true
-  profiles:
-    include: API-KEY
+
+# TODO: 배포 재설정 후 수정
+#  profiles:
+#    include: API-KEY
 
 logging.level:
   org.hibernate.SQL: debug
