--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,18 @@ dependencies {
 	implementation 'io.springfox:springfox-swagger2:2.9.2'
 	implementation 'io.springfox:springfox-swagger-ui:2.9.2'
 
+	// Social login
+	implementation 'com.google.code.gson:gson:2.8.7'
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+	implementation group: 'com.github.scribejava', name: 'scribejava-apis', version: '3.4.1'
+
+	// JWT
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
+
+	// redis
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
 	// QueryDsl
 	implementation 'com.querydsl:querydsl-jpa'
