--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,10 @@ repositories {
 	mavenCentral()
 }
 
+ext {
+	set('springCloudVersion', "2021.0.1")
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -57,6 +61,15 @@ dependencies {
 	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
 
+	//feignClient
+	implementation "org.springframework.cloud:spring-cloud-starter-openfeign:3.1.1"
+	compileOnly "org.springframework.cloud:spring-cloud-starter-openfeign:3.1.1"
+
+}
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:2021.0.1"
+	}
 }
 
 tasks.named('test') {
