--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -40,3 +40,8 @@ jwt:
   token-type: Bearer
   access-name: ACCESS-TOKEN
   refresh-name: REFRESH-TOKEN
+
+
+server:
+  recipe:
+    port: 54.180.212.229
