#147 fix: 레시피 url 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -49,4 +49,4 @@ jwt:
 
 server:
   recipe:
-    url: https://za8hqdiis4.execute-api.ap-northeast-2.amazonaws.com/dev
+    url: https://za8hqdiis4.execute-api.ap-northeast-2.amazonaws.com/dev/dev-ice-bulter-recipe
