#79 feat:레디스 서버 구축

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,6 +24,15 @@ spring:
       hibernate:
         format_sql: true
 
+  redis:
+    pool:
+      min-idle: 0
+      max-idle: 8
+      max-active: 8
+    port: 6379
+    host: 13.125.164.38
+    password: tmdgkr0802!
+
 # TODO: 배포 재설정 후 수정
 #  profiles:
 #    include: API-KEY
@@ -45,6 +54,8 @@ jwt:
   token-type: Bearer
   access-name: ACCESS-TOKEN
   refresh-name: REFRESH-TOKEN
+
+
 
 
 server:
