--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -56,3 +56,6 @@ jwt:
   access-name: ACCESS-TOKEN
   refresh-name: REFRESH-TOKEN
 
+server:
+  recipe:
+    url: https://za8hqdiis4.execute-api.ap-northeast-2.amazonaws.com/dev/dev-ice-bulter-recipe
