--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,9 @@ dependencies {
 	implementation "org.springframework.cloud:spring-cloud-starter-openfeign:3.1.1"
 	compileOnly "org.springframework.cloud:spring-cloud-starter-openfeign:3.1.1"
 
+	//map
+	implementation group: 'org.json', name: 'json', version: '20220924'
+
 }
 dependencyManagement {
 	imports {
