--- a/build.gradle
+++ b/build.gradle
@@ -68,11 +68,10 @@ dependencies {
 	implementation group: 'org.json', name: 'json', version: '20220924'
 
 	// SQS
-	implementation group: 'org.springframework.cloud', name: 'spring-cloud-aws-messaging', version: '2.2.3.RELEASE'
-	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '2.5.6'//나중에 메세지 유효성 검사를 위함
-
-
+	implementation "io.awspring.cloud:spring-cloud-starter-aws-messaging:2.3.0"
+	implementation "io.awspring.cloud:spring-cloud-aws-dependencies:2.3.0"
 }
+
 dependencyManagement {
 	imports {
 		mavenBom "org.springframework.cloud:spring-cloud-dependencies:2021.0.1"
