#196 feat: 애플 인앱결제 api 영수증 검증 기능 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -67,3 +67,9 @@ jwt:
 server:
   recipe:
     url: https://za8hqdiis4.execute-api.ap-northeast-2.amazonaws.com/dev/dev-ice-bulter-recipe
+
+apple:
+  production:
+    url: https://buy.itunes.apple.com/verifyReceipt
+  sandbox:
+    url: https://sandbox.itunes.apple.com/verifyReceipt
