--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,8 +30,8 @@ spring:
       max-idle: 8
       max-active: 8
     port: 6379
-    host: 13.125.164.38
-    password: tmdgkr0802!
+    host: 43.201.148.149
+    password: 1234
 
 # TODO: 배포 재설정 후 수정
 #  profiles:
