--- a/build.gradle
+++ b/build.gradle
@@ -74,6 +74,8 @@ dependencies {
 	// firebase
 	implementation 'com.google.firebase:firebase-admin:6.8.1'
 	implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.2.2'
+
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 }
 
 dependencyManagement {
