--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,16 +1,13 @@
 spring:
   application:
     name: IceButler_Server
+  profiles:
+    include: rds
 
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
-
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver # mysql 8??
-    url: jdbc:mysql://43.201.148.149:3306/icebulter
-    username: root # ??????
-    password: icebulter1350 #  # ??????
+ # ??????
   sql:
     init:
       platform: mysql
