#260 fix: 공공 데이터 인증키 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -80,3 +80,4 @@ apple:
 jasypt:
   encryptor:
     bean : jasyptStringEncryptor
+barcode-service-key: ENC(PSZXf47H/3fHcQkCw7eSvF9U6vx+VN4ilYC6S99r3QA=)
