#195 feat: 관리자 식품 수정 레시피 서버 데이터 동기화

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -69,7 +69,8 @@ jwt:
 
 server:
   recipe:
-    url: https://za8hqdiis4.execute-api.ap-northeast-2.amazonaws.com/dev/dev-ice-bulter-recipe
+#    url: https://za8hqdiis4.execute-api.ap-northeast-2.amazonaws.com/dev/dev-ice-bulter-recipe
+    url: http://localhost:8070
 
 apple:
   production:
