레디스 비밀번호 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,7 +34,7 @@ spring:
       max-active: 8
     port: 6379
     host: 3.36.98.12
-    password: 1234
+    password: seunghak8124!
 
 # TODO: 배포 재설정 후 수정
 #  profiles:
